--- a/src/SerialLoops/Views/Dialogs/EditUiTextDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/EditUiTextDialog.axaml
@@ -4,35 +4,44 @@
         xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
+        xmlns:controls="using:SerialLoops.Controls"
         xmlns:gbox="using:GroupBox.Avalonia.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         MinWidth="400" MinHeight="600"
-        Width="400" Height="600" Padding="10"
+        Width="400" Height="600"
+        TransparencyLevelHint="AcrylicBlur"
+        Background="{DynamicResource FallbackBackgroundColor}"
+        ExtendClientAreaToDecorationsHint="True"
         x:DataType="vm:EditUiTextDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.EditUiTextDialog"
+        Icon="/Assets/serial-loops.ico"
         Title="{x:Static assets:Strings.Edit_UI_Text}"
         Name="Dialog">
-    <Grid RowDefinitions="*,Auto" ColumnDefinitions="*">
-        <ScrollViewer Grid.Row="0">
-            <ItemsRepeater ItemsSource="{Binding UiTextStrings}">
-                <ItemsRepeater.Layout>
-                    <StackLayout Orientation="Vertical" Spacing="10"/>
-                </ItemsRepeater.Layout>
-                <ItemsRepeater.ItemTemplate>
-                    <DataTemplate DataType="vm:UiTextWithDescription">
-                        <gbox:GroupBox Header="{Binding Description}" Theme="{StaticResource GroupBoxClassic}">
-                            <TextBox Text="{Binding UiText}" Width="400" Height="80" AcceptsReturn="True"/>
-                        </gbox:GroupBox>
-                    </DataTemplate>
-                </ItemsRepeater.ItemTemplate>
-            </ItemsRepeater>
-        </ScrollViewer>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="3">
-            <Button Content="{x:Static assets:Strings.Save}" Command="{Binding SaveCommand}"
-                    CommandParameter="{Binding #Dialog}" IsDefault="True" HorizontalAlignment="Right"/>
-            <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}"
-                    CommandParameter="{Binding #Dialog}" IsCancel="True" HorizontalAlignment="Right"/>
-        </StackPanel>
-    </Grid>
+    <Panel>
+        <controls:AcrylicBorderHandler/>
+
+        <Grid RowDefinitions="*,Auto" ColumnDefinitions="*" Margin="10 30">
+            <ScrollViewer Grid.Row="0">
+                <ItemsRepeater ItemsSource="{Binding UiTextStrings}">
+                    <ItemsRepeater.Layout>
+                        <StackLayout Orientation="Vertical" Spacing="10"/>
+                    </ItemsRepeater.Layout>
+                    <ItemsRepeater.ItemTemplate>
+                        <DataTemplate DataType="vm:UiTextWithDescription">
+                            <gbox:GroupBox Header="{Binding Description}" Theme="{StaticResource GroupBoxClassic}">
+                                <TextBox Text="{Binding UiText}" Width="400" Height="80" AcceptsReturn="True"/>
+                            </gbox:GroupBox>
+                        </DataTemplate>
+                    </ItemsRepeater.ItemTemplate>
+                </ItemsRepeater>
+            </ScrollViewer>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="3">
+                <Button Content="{x:Static assets:Strings.Save}" Command="{Binding SaveCommand}"
+                        CommandParameter="{Binding #Dialog}" IsDefault="True" HorizontalAlignment="Right"/>
+                <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}"
+                        CommandParameter="{Binding #Dialog}" IsCancel="True" HorizontalAlignment="Right"/>
+            </StackPanel>
+        </Grid>
+    </Panel>
 </Window>
 
