--- a/src/SerialLoops/Views/Dialogs/ItemReferencesDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ItemReferencesDialog.axaml
@@ -3,28 +3,36 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:controls="using:SerialLoops.Controls"
         xmlns:i="using:Avalonia.Xaml.Interactivity"
         xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
         mc:Ignorable="d" d:DesignWidth="550" d:DesignHeight="300"
-        Width="900" Height="400"
+        SizeToContent="Width" Height="400"
+        TransparencyLevelHint="AcrylicBlur"
+        Background="{DynamicResource FallbackBackgroundColor}"
         x:DataType="vm:ItemReferencesDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.ItemReferencesDialog"
+        Icon="/Assets/serial-loops.ico"
         Title="{Binding Title}">
-    <ScrollViewer>
-        <Grid RowDefinitions="Auto,*" Width="550">
-            <StackPanel IsVisible="False">
-                <Button Command="{Binding CloseCommand}" HotKey="{Binding CloseHotKey}"></Button>
-            </StackPanel>
-            <TextBlock Grid.Row="0" Margin="10" FontWeight="Bold" Text="{Binding FoundReferencesLabel}" TextAlignment="Center" />
-            <TreeDataGrid Grid.Row="1" Background="{StaticResource AccentColor}" Margin="10" ShowColumnHeaders="False" CanUserResizeColumns="False" Name="Viewer" Source="{Binding Source}"
-                          KeyUp="Viewer_OnKeyUp">
-                <i:Interaction.Behaviors>
-                    <ia:EventTriggerBehavior EventName="DoubleTapped" SourceObject="{Binding #Viewer}">
-                        <ia:InvokeCommandAction Command="{Binding OpenItemCommand}" CommandParameter="{Binding #Viewer}"/>
-                    </ia:EventTriggerBehavior>
-                </i:Interaction.Behaviors>
-            </TreeDataGrid>
-        </Grid>
-    </ScrollViewer>
+    <Panel>
+        <controls:AcrylicBorderHandler/>
+
+        <ScrollViewer>
+            <Grid RowDefinitions="Auto,*" Width="550">
+                <StackPanel IsVisible="False">
+                    <Button Command="{Binding CloseCommand}" HotKey="{Binding CloseHotKey}"></Button>
+                </StackPanel>
+                <TextBlock Grid.Row="0" Margin="10" FontWeight="Bold" Text="{Binding FoundReferencesLabel}" TextAlignment="Center" />
+                <TreeDataGrid Grid.Row="1" Background="{StaticResource AccentColor}" Margin="10" ShowColumnHeaders="False" CanUserResizeColumns="False" Name="Viewer" Source="{Binding Source}"
+                              KeyUp="Viewer_OnKeyUp">
+                    <i:Interaction.Behaviors>
+                        <ia:EventTriggerBehavior EventName="DoubleTapped" SourceObject="{Binding #Viewer}">
+                            <ia:InvokeCommandAction Command="{Binding OpenItemCommand}" CommandParameter="{Binding #Viewer}"/>
+                        </ia:EventTriggerBehavior>
+                    </i:Interaction.Behaviors>
+                </TreeDataGrid>
+            </Grid>
+        </ScrollViewer>
+    </Panel>
 </Window>
 
