--- a/src/SerialLoops/Views/Dialogs/SearchDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/SearchDialog.axaml
@@ -8,18 +8,16 @@
         xmlns:controls="using:SerialLoops.Controls"
         xmlns:i="using:Avalonia.Xaml.Interactivity"
         xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
-        MinWidth="{Binding MinWidth}"
-        MinHeight="{Binding MinHeight}"
-        Width="{Binding Width}"
-        Height="{Binding Height}"
+        MinWidth="850" MinHeight="700"
+        Width="900" Height="750"
+        TransparencyLevelHint="AcrylicBlur"
+        Background="{DynamicResource FallbackBackgroundColor}"
+        ExtendClientAreaToDecorationsHint="True"
         Icon="/Assets/serial-loops.ico"
         x:DataType="vm:SearchDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.SearchDialog"
         Title="{x:Static assets:Strings.Search_Project}"
-        Name="Dialog"
-        TransparencyLevelHint="AcrylicBlur"
-        Background="{DynamicResource FallbackBackgroundColor}"
-        ExtendClientAreaToDecorationsHint="True">
+        Name="Dialog">
     <Panel>
         <controls:AcrylicBorderHandler/>
 
